--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
@@ -30,4 +30,102 @@
   to {
     transform: rotate(360deg);
   }
+} */
+/* ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+} */
+
+/* li {
+  float: left;
+} */
+
+h1 {
+  color: white;
 }
+
+/* li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+} */
+
+/* li a:hover {
+  background-color: #111;
+} */
+body {
+  font-family: Arial;
+  text-align: center;
+  padding-top: 2em;
+  background-color: #222;
+}
+/* a {
+  min-width: 218px;
+  color: #d5402b ;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 51px;
+  text-transform: uppercase;
+  display: inline-block;
+  border: 1px solid #d5402b;
+  position: relative;
+  overflow: hidden;
+  text-decoration: none;
+  text-align: center;
+  cursor: pointer;
+  -ms-transform: skewX(-45deg);
+  -webkit-transform: skewX(-45deg);
+  transform: skewX(-45deg);
+  margin-left: 2em;
+} */
+
+.brk-btn {
+  font-size: 18px;
+  font-weight: 400;
+  position: relative;
+  background: none;
+  color: red;
+  text-transform: uppercase;
+  text-decoration: none;
+  border: 0.2em solid red;
+  padding: 0.5em 1em;
+  margin-left: 2em;
+}
+.brk-btn::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 10%;
+  background: #222;
+  height: 0.3em;
+  right: 20%;
+  top: -0.21em;
+  transform: skewX(-45deg);
+  -webkit-transition: all 0.45s cubic-bezier(0.86, 0, 0.07, 1);
+  transition: all 0.20s cubic-bezier(0.86, 0, 0.07, 1);
+}
+.brk-btn::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 10%;
+  background: #222;
+  height: 0.3em;
+  left: 20%;
+  bottom: -0.25em;
+  transform: skewX(45deg);
+  -webkit-transition: all 0.45 cubic-bezier(0.86, 0, 0.07, 1);
+  transition: all 0.20s cubic-bezier(0.86, 0, 0.07, 1);
+}
+.brk-btn:hover::before {
+  right: 80%;
+}
+.brk-btn:hover::after {
+  left: 80%;
+}
+
