got all collisions working

--- a/src/App.css
+++ b/src/App.css
@@ -168,7 +168,7 @@ html {
 }
 #stars:after {
     content: " ";
-    position: absolute;
+    z-index: 50;
     top: 2000px;
     width: 1px;
     height: 1px;
@@ -1803,7 +1803,7 @@ html {
 }
 #stars2:after {
     content: " ";
-    position: absolute;
+    z-index: 50;
     top: 2000px;
     width: 2px;
     height: 2px;
@@ -3527,7 +3527,7 @@ html {
 }
 #stars3:after {
     content: " ";
-    position: absolute;
+    z-index: 50;
     top: 2000px;
     width: 3px;
     height: 3px;
