--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,12 @@ body {
     padding-top: 1em;
 }
 
+#github_logo {
+    float: right;
+    margin-right: 2em;
+    margin-top: 0.5em;
+}
+
 #soundcloud {
     float: right;
     margin-top: -1em;
@@ -271,3 +277,69 @@ html {
   position: relative;
   z-index: 2;
 } */
+
+/* pre-loader */
+.sk-wave {
+    margin: 0;
+    width: 300px;
+    height: 200px;
+    text-align: center;
+    font-size: 10px;
+  }
+  
+  .sk-wave .sk-rect {
+    background-color: red;
+    height: 100%;
+    width: 30px;
+    margin-left: 2em;
+    display: inline-block;
+    -webkit-animation: sk-waveStretchDelay 1.2s infinite ease-in-out;
+    animation: sk-waveStretchDelay 1.2s infinite ease-in-out;
+  }
+  
+  .sk-wave .sk-rect1 {
+    -webkit-animation-delay: -1.2s;
+    animation-delay: -1.2s;
+  }
+  
+  .sk-wave .sk-rect2 {
+    -webkit-animation-delay: -1.1s;
+    animation-delay: -1.1s;
+  }
+  
+  .sk-wave .sk-rect3 {
+    -webkit-animation-delay: -1s;
+    animation-delay: -1s;
+  }
+  
+  .sk-wave .sk-rect4 {
+    -webkit-animation-delay: -0.9s;
+    animation-delay: -0.9s;
+  }
+  
+  .sk-wave .sk-rect5 {
+    -webkit-animation-delay: -0.8s;
+    animation-delay: -0.8s;
+  }
+  
+  @-webkit-keyframes sk-waveStretchDelay {
+    0%, 40%, 100% {
+      -webkit-transform: scaleY(0.4);
+      transform: scaleY(0.4);
+    }
+    20% {
+      -webkit-transform: scaleY(1);
+      transform: scaleY(1);
+    }
+  }
+  
+  @keyframes sk-waveStretchDelay {
+    0%, 40%, 100% {
+      -webkit-transform: scaleY(0.4);
+      transform: scaleY(0.4);
+    }
+    20% {
+      -webkit-transform: scaleY(1);
+      transform: scaleY(1);
+    }
+  }
