finished rank page

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Orbitron:700);
-@font-face { font-family: Alien Encounters; 
-    src: url(./assets/Alien-Encounters-Italic.ttf); }
+@font-face {
+    font-family: Alien Encounters;
+    src: url(./assets/Alien-Encounters-Italic.ttf);
+}
 h1 {
     color: white;
 }
@@ -40,6 +42,26 @@ h4 {
     color: white;
     margin-left: 10%;
     margin-right: 10%;
+}
+
+table {
+    position: relative;
+    width: 50em;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+td,
+th {
+    color: white;
+    font-size: 24pt;
+}
+
+th {
+    border-bottom: 2px solid red;
+}
+.rank {
+    color: red;
 }
 
 #star_runner_logo {
@@ -285,9 +307,9 @@ html {
     height: 200px;
     text-align: center;
     font-size: 10px;
-  }
-  
-  .sk-wave .sk-rect {
+}
+
+.sk-wave .sk-rect {
     background-color: red;
     height: 100%;
     width: 30px;
@@ -295,51 +317,55 @@ html {
     display: inline-block;
     -webkit-animation: sk-waveStretchDelay 1.2s infinite ease-in-out;
     animation: sk-waveStretchDelay 1.2s infinite ease-in-out;
-  }
-  
-  .sk-wave .sk-rect1 {
+}
+
+.sk-wave .sk-rect1 {
     -webkit-animation-delay: -1.2s;
     animation-delay: -1.2s;
-  }
-  
-  .sk-wave .sk-rect2 {
+}
+
+.sk-wave .sk-rect2 {
     -webkit-animation-delay: -1.1s;
     animation-delay: -1.1s;
-  }
-  
-  .sk-wave .sk-rect3 {
+}
+
+.sk-wave .sk-rect3 {
     -webkit-animation-delay: -1s;
     animation-delay: -1s;
-  }
-  
-  .sk-wave .sk-rect4 {
+}
+
+.sk-wave .sk-rect4 {
     -webkit-animation-delay: -0.9s;
     animation-delay: -0.9s;
-  }
-  
-  .sk-wave .sk-rect5 {
+}
+
+.sk-wave .sk-rect5 {
     -webkit-animation-delay: -0.8s;
     animation-delay: -0.8s;
-  }
-  
-  @-webkit-keyframes sk-waveStretchDelay {
-    0%, 40%, 100% {
-      -webkit-transform: scaleY(0.4);
-      transform: scaleY(0.4);
+}
+
+@-webkit-keyframes sk-waveStretchDelay {
+    0%,
+    40%,
+    100% {
+        -webkit-transform: scaleY(0.4);
+        transform: scaleY(0.4);
     }
     20% {
-      -webkit-transform: scaleY(1);
-      transform: scaleY(1);
+        -webkit-transform: scaleY(1);
+        transform: scaleY(1);
     }
-  }
-  
-  @keyframes sk-waveStretchDelay {
-    0%, 40%, 100% {
-      -webkit-transform: scaleY(0.4);
-      transform: scaleY(0.4);
+}
+
+@keyframes sk-waveStretchDelay {
+    0%,
+    40%,
+    100% {
+        -webkit-transform: scaleY(0.4);
+        transform: scaleY(0.4);
     }
     20% {
-      -webkit-transform: scaleY(1);
-      transform: scaleY(1);
+        -webkit-transform: scaleY(1);
+        transform: scaleY(1);
     }
-  }
+}
