--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ th {
 th {
     border-bottom: 2px solid red;
 }
+
 .rank {
     color: red;
 }
@@ -221,7 +222,7 @@ html {
 /* Stars 
 ------------------------------------- */
 
-#space,
+#star_field,
 .stars {
     overflow: hidden;
     position: absolute;
@@ -302,7 +303,10 @@ html {
 
 /* pre-loader */
 .sk-wave {
-    margin: 0;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10em;
     width: 300px;
     height: 200px;
     text-align: center;
